<resources>
    <string name="app_name">TravelHorizon</string>
    <string name="action_settings">Settings</string>
    <string name="list">List</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="modify">Modify</string>
    <string name="del">Delete</string>
    <string name="search">Search</string>
    <string name="add_desc">Add item</string>
    <string name="del_desc">Delete item</string>
    <string name="modify_desc">Modify item</string>
    <string name="search_items">Search items</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="hour">hour</string>
    <string name="min">min</string>
    <string name="location">Loc.</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="subject">Subject</string>
    <string name="Content">Content</string>
    <string name="revisit">Revisit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="previous">Prev</string>
    <string name="open_map_app">Open Map App</string>
    <string name="update_gps_inf">Update GPS location information(latitude, longitude)</string>
    <string name="no_data">There is no data to display.</string>
    <string name="confirm_del_data">Are you sure you want to delete?</string>
    <string name="no_gps_permission">Unable to get GPS Locations.\nTurn the location permissions on.</string>
    <string name="no_location_info">You can\'t use a location information.</string>
    <string name="progress_loading">Location data loading ...</string>
    <string name="error">Error !!!!!</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="confirm_restore">If you restore the data, then All Data that alreay exist will be deleted.\nDo you want to restore the data?</string>
    <string name="backup_complete">Backup(Export) completed.</string>
    <string name="restore_complete">Restore(Import) completed.\nRestart App</string>
    <string name="search_desc">If there is no any input word, Items that Revisit is checked will be searched.</string>
    <string name="version">Version</string>
</resources>