<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kotlin.travelhorizon.MainActivity">
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="11"
        android:title="@string/add_desc"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_del"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="40"
        android:title="@string/del_desc"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="30"
        android:title="@string/search_desc"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_modify"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="20"
        android:title="@string/modify_desc"
        app:showAsAction="always" />
</menu>